use alpine 3.5 and config redial

--- a/xl2tpd.conf
+++ b/xl2tpd.conf
@@ -4,3 +4,6 @@ lns = xxx.xxx.xxx.xxx
 ppp debug = yes
 pppoptfile = /etc/ppp/options.l2tpd.client
 length bit = yes
+redial = yes
+redial timeout = 20
+max redials = 10
